--- a/app/src/main/res/drawable/ic_chevron_right.xml
+++ b/app/src/main/res/drawable/ic_chevron_right.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="960">
   <path
       android:pathData="M504,480 L348,324q-11,-11 -11,-28t11,-28q11,-11 28,-11t28,11l184,184q6,6 8.5,13t2.5,15q0,8 -2.5,15t-8.5,13L404,692q-11,11 -28,11t-28,-11q-11,-11 -11,-28t11,-28l156,-156Z"
-      android:fillColor="#e8eaed"/>
+      android:fillColor="#000000"/>
 </vector>
