--- a/app/src/main/res/drawable/quantity_background.xml
+++ b/app/src/main/res/drawable/quantity_background.xml
@@ -4,6 +4,6 @@
     <stroke
         android:width="1dp"
         android:color="#E0E0E0" />
-    <solid android:color="#FFFFFF" />
-    <corners android:radius="16dp" />
+    <solid android:color="#fafafa" />
+    <corners android:radius="4dp" />
 </shape>
