--- a/app/src/main/res/layout/bottom_sheet_credit.xml
+++ b/app/src/main/res/layout/bottom_sheet_credit.xml
@@ -124,6 +124,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
         <EditText
+            style="@style/h4"
             android:id="@+id/paid_input"
             android:layout_width="250dp"
             android:layout_height="@dimen/edit_text_height"
