--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -3,80 +3,119 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginVertical="10dp"
-    app:cardElevation="2dp">
+    app:cardElevation="0dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/card_border"
         android:padding="16dp">
+
+        <ImageView
+            android:id="@+id/product_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/image_placeholder"
+            android:contentDescription="Product Image"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/modal_price" />
 
         <TextView
             android:id="@+id/product_text"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
+            style="@style/h4_bold"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:text="Amplop Paperline Biru Kecil 200/80 blablablalbla blalb albla"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/product_image"
+            app:layout_constraintTop_toTopOf="@id/product_image" />
+
+        <TextView
+            android:id="@+id/supplier_text"
             style="@style/p"
-            android:maxLines="2"
-            android:ellipsize="end"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:text="(elham)"
+            app:layout_constraintStart_toStartOf="@id/product_text"
+            app:layout_constraintTop_toBottomOf="@id/product_text" />
+
+
+        <TextView
+            android:id="@+id/modal_price"
+            style="@style/p"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="[Rp200.000.000]"
+            android:textColor="@color/black"
+            app:layout_constraintEnd_toEndOf="parent
+"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/priceEdit"
-            android:layout_width="200dp"
+            style="@style/h4"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toStartOf="@id/unitsSpinner"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/product_text"
-            android:hint="Harga Produk"
+            android:layout_marginTop="12dp"
+            android:layout_marginEnd="24dp"
+            android:hint="100.000.000"
             android:inputType="numberDecimal"
-            android:textColor="@color/black"/>
+            android:textColor="@color/black"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/unitsSpinner"
+            app:layout_constraintStart_toStartOf="@id/product_text"
+            app:layout_constraintTop_toBottomOf="@+id/supplier_text" />
 
         <Spinner
             android:id="@+id/unitsSpinner"
             android:layout_width="wrap_content"
-            android:layout_height="0dp"
-            app:layout_constraintTop_toBottomOf="@id/product_text"
-            app:layout_constraintStart_toEndOf="@id/priceEdit"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="-16dp"
+            android:layout_marginBottom="8dp"
+            android:theme="@style/customSpinner"
+            app:layout_constraintBottom_toTopOf="@id/quantityLayout"
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <LinearLayout
             android:id="@+id/quantityLayout"
             android:layout_width="wrap_content"
-            android:layout_height="32dp"
-            android:gravity="center_vertical"
+            android:layout_height="wrap_content"
             android:background="@drawable/quantity_background"
-            android:paddingHorizontal="10dp"
+            android:gravity="center_vertical"
             android:orientation="horizontal"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="4dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent">
 
             <ImageButton
                 android:id="@+id/btnMinus"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Decrease quantity"
                 android:src="@drawable/ic_remove" />
 
             <TextView
                 android:id="@+id/quantityText"
+                style="@style/p_bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginHorizontal="16dp"
-                android:textSize="15sp"
-                android:textStyle="bold"
-                android:text="10"/>
+                android:layout_marginHorizontal="18dp"
+                android:text="10"
+                android:textColor="@color/black" />
 
             <ImageButton
                 android:id="@+id/btnPlus"
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_width="10dp"
+                android:layout_height="10dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Increase quantity"
-                android:src="@drawable/ic_plus" />
+                android:src="@drawable/ic_plus_thin" />
 
         </LinearLayout>
 
