--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -54,9 +54,11 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginTop="16dp"
-        android:padding="10dp"
+        android:paddingHorizontal="24dp"
+        android:paddingVertical="10dp"
         android:text="Tambah Keranjang"
         app:layout_constraintEnd_toEndOf="@id/guideline2"
+        app:layout_constraintStart_toStartOf="@+id/guideline"
         app:layout_constraintTop_toBottomOf="@id/product_dropdown" />
 
     <ImageView
@@ -83,7 +85,7 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/cartRecyclerView"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:clipToPadding="false"
         android:paddingBottom="@dimen/keyboard_padding"
@@ -130,26 +132,27 @@
                 android:layout_height="wrap_content"
                 android:text="Total"
                 app:layout_constraintStart_toStartOf="@id/guideline4"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/count_total"
+                style="@style/h3_bold"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintTop_toBottomOf="@id/total_title"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="@id/guideline4"
-                style="@style/h3_bold"
-                android:textColor="#ec5624" />
+                app:layout_constraintTop_toBottomOf="@id/total_title" />
 
             <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/button_checkout"
+                style="@style/blueButtonStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/medium_button_height"
-                style="@style/blueButtonStyle"
+                android:paddingVertical="10dp"
+                android:paddingHorizontal="24dp"
                 android:text="Checkout"
-                android:padding="10dp"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/guideline5"/>
+                app:layout_constraintEnd_toEndOf="@id/guideline5"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
