--- a/app/src/main/res/layout/fragment_detail_history.xml
+++ b/app/src/main/res/layout/fragment_detail_history.xml
@@ -83,11 +83,26 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:backgroundTint="@color/black"
+                android:layout_marginEnd="8dp"
                 android:text="Angsuran"
                 android:textColor="@color/white"
                 android:textSize="10sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="@id/guideline_inside_2"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/menu_icon"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginEnd="8dp"
+                android:clickable="true"
+                android:contentDescription="Menu"
+                android:focusable="true"
+                android:padding="8dp"
+                android:src="@drawable/ic_more_vert"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
@@ -114,58 +129,58 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="15dp">
+<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:padding="15dp">-->
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.06" />
+<!--            <androidx.constraintlayout.widget.Guideline-->
+<!--                android:id="@+id/guideline4"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                app:layout_constraintGuide_percent="0.06" />-->
 
-            <androidx.constraintlayout.widget.Guideline
-                android:id="@+id/guideline5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:layout_constraintGuide_percent="0.94" />
+<!--            <androidx.constraintlayout.widget.Guideline-->
+<!--                android:id="@+id/guideline5"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:orientation="vertical"-->
+<!--                app:layout_constraintGuide_percent="0.94" />-->
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_share"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:drawableEnd="@drawable/ic_share"
-                android:drawablePadding="8dp"
-                android:drawableTint="@color/black"
-                android:paddingHorizontal="30dp"
-                android:paddingVertical="16dp"
-                android:text="Share"
-                android:textAllCaps="false"
-                android:textColor="@color/black"
+<!--            <androidx.appcompat.widget.AppCompatButton-->
+<!--                android:id="@+id/button_share"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:drawableEnd="@drawable/ic_share"-->
+<!--                android:drawablePadding="8dp"-->
+<!--                android:drawableTint="@color/black"-->
+<!--                android:paddingHorizontal="30dp"-->
+<!--                android:paddingVertical="16dp"-->
+<!--                android:text="Share"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:textColor="@color/black"-->
+<!--                app:layout_constraintEnd_toStartOf="@id/button_print"-->
+<!--                app:layout_constraintStart_toStartOf="@id/guideline4"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
 
-                app:layout_constraintEnd_toStartOf="@id/button_print"
-                app:layout_constraintStart_toStartOf="@id/guideline4" />
+<!--            <androidx.appcompat.widget.AppCompatButton-->
+<!--                android:id="@+id/button_print"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:backgroundTint="@color/black"-->
+<!--                android:drawableEnd="@drawable/ic_print"-->
+<!--                android:drawablePadding="8dp"-->
+<!--                android:drawableTint="@color/white"-->
+<!--                android:paddingHorizontal="30dp"-->
+<!--                android:paddingVertical="16dp"-->
+<!--                android:text="Print"-->
+<!--                android:textAllCaps="false"-->
+<!--                android:textColor="@color/white"-->
+<!--                app:layout_constraintEnd_toEndOf="@id/guideline5"-->
+<!--                app:layout_constraintStart_toEndOf="@id/button_share"-->
+<!--                app:layout_constraintTop_toTopOf="parent" />-->
 
-            <androidx.appcompat.widget.AppCompatButton
-                android:id="@+id/button_print"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/black"
-                android:drawableEnd="@drawable/ic_print"
-                android:drawablePadding="8dp"
-                android:drawableTint="@color/white"
-                android:paddingHorizontal="30dp"
-                android:paddingVertical="16dp"
-                android:text="Print"
-                android:textAllCaps="false"
-                android:textColor="@color/white"
-                app:layout_constraintEnd_toEndOf="@id/guideline5"
-                app:layout_constraintStart_toEndOf="@id/button_share"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
