--- a/app/src/main/res/layout/stock_list_layout.xml
+++ b/app/src/main/res/layout/stock_list_layout.xml
@@ -1,109 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="10dp"
     app:cardElevation="2dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="20dp"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp" >
+        android:paddingTop="10dp"
+        android:paddingEnd="16dp"
+        android:paddingBottom="20dp">
 
         <TextView
             android:id="@+id/date_text"
+            style="@style/h4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="19 Okt 2024"
-            style="@style/h4"
-            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/clock_text"
+            style="@style/h4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
             android:text="10:00"
-            style="@style/h4"
             app:layout_constraintStart_toEndOf="@id/date_text"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
-
-        <TextView
-            android:id="@+id/latestStockText"
-            android:layout_width="160dp"
-            android:layout_height="wrap_content"
-            android:text="Stock Sebelumnya : "
-            style="@style/h4_bold"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/clock_text"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp" />
-
-        <TextView
-            android:id="@+id/latestStockValue"
-            android:layout_width="150dp"
-            android:layout_height="wrap_content"
-            android:text="100000 pcs"
-            style="@style/h4_bold"
-            app:layout_constraintTop_toBottomOf="@id/date_text"
-            app:layout_constraintStart_toEndOf="@id/latestStockText"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/typeText"
-            android:layout_width="160dp"
+            style="@style/h4_bold"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
             android:text="transaction"
-            style="@style/h4_bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/latestStockText"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp" />
+            app:layout_constraintTop_toBottomOf="@id/date_text" />
 
         <TextView
-            android:id="@+id/quantityText"
-            android:layout_width="150dp"
+            android:textColor="@color/black"
+            android:id="@+id/latestStockValue"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="100 pcs"
-            style="@style/h4_bold"
-            app:layout_constraintTop_toBottomOf="@id/latestStockValue"
-            app:layout_constraintStart_toEndOf="@id/typeText"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
-
-        <TextView
-            android:id="@+id/currentStockText"
-            android:layout_width="170dp"
-            android:layout_height="wrap_content"
-            android:text="Stock Sekarang : "
-            style="@style/h3"
+            android:layout_marginTop="2dp"
+            android:text="latest Stock"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/typeText"
-            android:layout_marginTop="10dp"
-            android:layout_marginStart="10dp" />
+            app:layout_constraintTop_toBottomOf="@id/typeText" />
+
+        <ImageView
+            android:id="@+id/changeIcon"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
+            android:layout_marginHorizontal="2dp"
+            android:background="@drawable/ic_chevron_right"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/latestStockValue"
+            app:layout_constraintTop_toTopOf="@id/latestStockValue" />
 
         <TextView
             android:id="@+id/currentStockValue"
-            android:layout_width="150dp"
+            style="@style/h4"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1000 pcs"
-            style="@style/h3"
-            app:layout_constraintTop_toBottomOf="@id/quantityText"
-            app:layout_constraintStart_toEndOf="@id/typeText"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginStart="10dp"
-            android:layout_marginTop="10dp"/>
+            android:text="Cureent Stock"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toEndOf="@id/changeIcon"
+            app:layout_constraintTop_toTopOf="@id/latestStockValue" />
+
+        <TextView
+            android:id="@+id/quantityText"
+            style="@style/h3_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="100"
+            android:textAlignment="textEnd"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
