--- a/app/src/main/res/menu/history_fragment_menu.xml
+++ b/app/src/main/res/menu/history_fragment_menu.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-
+    <item
+        android:id="@+id/action_filter_history"
+        android:title="Urutkan &amp; Filter" />
 </menu>
